fix: images not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -165,7 +165,7 @@ section {
 }
 
 /* section search box */
-.search-box-wrapper {
+.search-box {
   padding: 2em;
   position: relative;
   top: -100px;
@@ -173,11 +173,25 @@ section {
   border-radius: 6px;
   background: var(--dark-violet) url(/images/bg-boost-desktop.svg) no-repeat
     center center;
-}
-.search-box {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.result {
+  /* display: none; */
+  position: relative;
+  top: -80px;
+}
+
+.result-url {
+  padding: 1em;
+  margin: 1em 0;
+  background-color: #fff;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .form-control {
@@ -210,29 +224,52 @@ section {
 
 .feature-card-wrapper {
   padding-top: 5em;
+  padding-bottom: 5em;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2em;
+  position: relative;
+}
+
+.feature-card-wrapper::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: var(--very-dark-blue);
+  z-index: 10;
 }
 
 .card {
   background-color: #fff;
   padding: 0 2em 2em;
   border-radius: 4px;
+  z-index: 100;
+}
+
+.card:nth-child(2) {
+  position: relative;
+  top: 50px;
+}
+
+.card:nth-child(3) {
+  position: relative;
+  top: 100px;
 }
 
 .card-icon {
   position: relative;
   transform: translateY(-30px);
+  background-color: var(--very-dark-blue);
+  border-radius: 50%;
   width: 60px;
   height: 60px;
-  padding: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  background-color: var(--very-dark-blue);
+  padding: 1em;
+}
+
+.card-icon img {
+  width: 100%;
 }
 
 .card-title {
